Create the app prototype

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-yandex-maps": "^0.8.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
