--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.14.1",
     "vue-yandex-maps": "^0.8.17"
   },
   "devDependencies": {
