--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "description": "Placing markers on map",
   "author": "Alena <cgwbmp@gmail.com>",
-  "homepage": "https://cgwbmp.github.io/rick-and-morty",
+  "homepage": "https://cgwbmp.github.io/map-markers",
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -30,6 +32,7 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "gh-pages": "^2.1.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
